--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,23 @@
     <title>Exercice hebdomadaire 11</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <script
+      src="https://kit.fontawesome.com/05fc2f8836.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="button">
+      <div class="icon"><i class="fa-regular fa-heart"></i></div>
+      <div class="like">Like</div>
+      <div class="number">147</div>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
